--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(C_cf1cdf)
 export(C_cf1pdf)
 export(C_cf1reform)
+export(C_cf1sample)
 export(C_cf1sojourn)
 export(cphsrm)
 export(dcf1)
@@ -10,6 +11,7 @@ export(em_cf1_emstep)
 export(fit.srm.cph)
 export(pcf1)
 export(qcf1)
+export(rcf1)
 import(R6)
 import(Rsrat)
 importFrom(Matrix,Matrix)
