--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(C_cf1pdf)
 export(C_cf1reform)
 export(C_cf1sample)
 export(C_cf1sojourn)
+export(cf1llf)
 export(cphsrm)
 export(dcf1)
 export(em_cf1_emstep)
