--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Rphsrm
 Type: Package
 Title: A Software Reliability Assessment Tool with Phase-Type NHPP-Based Models
-Version: 0.1.4
-Date: 2019-11-20
+Version: 0.1.5
+Date: 2020-4-6
 Author: Hiroyuki OKAMURA
 Maintainer: Hiroyuki OKAMURA <okamu@hiroshima-u.ac.jp>
 Description: This package provides estimation programs for software
@@ -14,4 +14,4 @@ Imports: R6, Rcpp, Matrix
 License: MIT + file LICENSE
 Encoding: UTF-8
 RoxygenNote: 6.1.1
-Remotes: okamumu/Rsrat
+Remotes: SwReliab/Rsrat
